# SaffronQueue

./: .docker-compose.yml.swp  .gitlab-ci.yml  README.md  argo  docker-compose.yml  gitlab  gitlab.pub  gitlab_deploy_key  gitlab_deploy_key.pub
.gitlab/: cd.yml  ci.yml
api/: Dockerfile  pyproject.toml
api/app/: db.py  logging_utils.py  main.py  models.py  redis_client.py  schemas.py  settings.py  ui.py
deploy/: docker-compose.prod.yml
helm/saffronqueue/: Chart.yaml  values.yaml
helm/saffronqueue/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-service.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  postgres-deployment.yaml  redis-deployment.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
helm/saffronqueue/templates/tests/: test-connection.yaml
tests/: test_health.py
worker/: Dockerfile  db.py  logging_utils.py  models.py  pyproject.toml  redis_client.py  settings.py  worker.py
