[project]
name = "saffronqueue-api"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "sqlalchemy==2.0.30",
  "psycopg[binary]==3.1.19",
  "jinja2==3.1.4",
  "pydantic-settings==2.3.4",
  "redis==5.0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
